[gd_scene load_steps=19 format=2]

[ext_resource path="res://dataCode/TimeCounter.cs" type="Script" id=1]
[ext_resource path="res://Characters/Zul.tscn" type="PackedScene" id=2]
[ext_resource path="res://dataCode/Game.gd" type="Script" id=3]
[ext_resource path="res://dataFile/emojis/angry.png" type="Texture" id=4]
[ext_resource path="res://Entities/MainCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://dataFile/fonts/UbuntuMono-BoldItalic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://dataCode/Score.cs" type="Script" id=7]
[ext_resource path="res://dataFile/fonts/UbuntuMono-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://dataFile/fonts/UbuntuMono-Italic.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://dataFile/fonts/UbuntuMono-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://dataFile/xfx/select2.wav" type="AudioStream" id=11]
[ext_resource path="res://dataFile/emojis/eyeglass.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 59
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 140
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 60
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 50
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=5]
resource_name = "InPlayer"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Zul:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 960, -0.25, 0, 0.25, 0, 960, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Zul:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -10, -0.25, 0, 0.25, 0, 1020, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("GUI/MarginContainer/HBoxContainer/VBoxContainer:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("GUI/MarginContainer/HBoxContainer/VBoxContainer:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -140, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("GUI/MarginContainer/Life3:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1720, -0.25, 0, 0.25, 0, 1720, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("GUI/MarginContainer/Life3:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -50, -0.25, 0, 0.25, 0, 50, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("GUI/MarginContainer/Life2:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1800, -0.25, 0, 0.25, 0, 1800, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("GUI/MarginContainer/Life2:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( -50, -0.25, 0, 0.25, 0, 50, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("GUI/MarginContainer/Life1:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1880, -0.25, 0, 0.25, 0, 1880, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("GUI/MarginContainer/Life1:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( -50, -0.25, 0, 0.25, 0, 50, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=6]
resource_name = "OutGame"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 330, 445 ), Vector2( 330, -600 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GUI:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("GUI:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -1046, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 959.53 ]
}

[node name="Zul" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 30.9824 )
rotation = -1.57079

[node name="MainCamera" parent="." instance=ExtResource( 5 )]
anchor_mode = 0
current = true

[node name="GUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
margin_right = 376.0
margin_bottom = 80.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 356.0
margin_bottom = 134.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/HBoxContainer"]
margin_right = 336.0
margin_bottom = 124.0
size_flags_horizontal = 3

[node name="TimeCounter" type="Label" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 336.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00:00"
script = ExtResource( 1 )

[node name="Score" type="Label" parent="GUI/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 336.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.913725, 0.121569, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
script = ExtResource( 7 )

[node name="Life1" type="Sprite" parent="GUI/MarginContainer"]
position = Vector2( 1880, -46.0211 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 12 )

[node name="Life2" type="Sprite" parent="GUI/MarginContainer"]
position = Vector2( 1800, -46.0211 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 12 )

[node name="Life3" type="Sprite" parent="GUI/MarginContainer"]
position = Vector2( 1720, -46.0211 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 12 )

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 330.0
margin_top = 445.0
margin_right = 1590.0
margin_bottom = 586.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.470588, 0.470588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Zul foi destruido!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="GameOverLabel"]
anchor_left = -0.00139988
anchor_right = -0.00139988
margin_left = 166.764
margin_top = -347.0
margin_right = 1096.76
margin_bottom = -286.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "espaço para recomeçar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GameOverLabel"]
anchor_left = -0.00139988
anchor_right = -0.00139988
margin_left = 65.7638
margin_top = 350.0
margin_right = 1199.0
margin_bottom = 411.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 1, 0.913725, 0.121569, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IfSaveLabel" type="Label" parent="GameOverLabel"]
anchor_left = -0.00139988
anchor_right = -0.00139988
margin_left = -6.23615
margin_top = 401.0
margin_right = 1267.76
margin_bottom = 462.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLabel" type="Label" parent="GameOverLabel"]
margin_left = 442.0
margin_top = -400.0
margin_right = 817.0
margin_bottom = -349.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "ESC para voltar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GameOverLabel"]
position = Vector2( 1310, 75 )
texture = ExtResource( 4 )

[node name="GameOverTimer" type="Timer" parent="."]
one_shot = true

[node name="OutTime" type="Timer" parent="."]
one_shot = true

[node name="MenuSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -30.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/InPlayer = SubResource( 5 )
anims/OutGame = SubResource( 6 )

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="OutTime" to="." method="_on_OutTime_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
